# FanUpperComputer

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.hpp  opcode.hpp  ui_mainwindow.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui
